# CodeUrja1.0

./: README.md
DigitalCourtroom/DigitalCourtroom/: .terraform.lock.hcl  backend-deployment.yaml  backend-service.yaml  db-deployment.yaml  db-service.yaml  deploy.tf  docker-compose.yaml  front-vol-persistentvolumeclaim.yaml  frontend-deployment.yaml  frontend-service.yaml  terraform.tfstate  terraform.tfstate.backup
DigitalCourtroom/DigitalCourtroom/auth/: .dockerignore  .env  Cargo.toml  Dockerfile
DigitalCourtroom/DigitalCourtroom/auth/src/: main.rs
DigitalCourtroom/DigitalCourtroom/auth/src/services/: auth.rs
DigitalCourtroom/DigitalCourtroom/backend/: .env  Cargo.toml  Dockerfile  rustc-ice-2025-03-26T22_19_06-1321666.txt  rustc-ice-2025-03-26T22_19_07-1321672.txt
DigitalCourtroom/DigitalCourtroom/backend/.sqlx/: query-5f3ef83212428d290c870f98263c863392af4f782607f69b27569fa3e8ae7823.json  query-65c5f70ec55a7dc4030df3eca7cee1bf72287356deb6543aa7fd649bef760a27.json  query-cba2bc7b0d1d71e32bf7b40975c55652dc4e99e4ff729eb9b884d2d89605ad90.json  query-e95c392b7ae29fb4289d79cedd86e00824f96203ceca85b9d597be598d283d02.json
DigitalCourtroom/DigitalCourtroom/backend/migrations/: 20250326214723_cases.down.sql  20250326214723_cases.up.sql  20250327005347_documents.down.sql  20250327005347_documents.up.sql
DigitalCourtroom/DigitalCourtroom/backend/src/: main.rs
DigitalCourtroom/DigitalCourtroom/backend/src/services/: cases.rs  documents.rs  mod.rs
DigitalCourtroom/DigitalCourtroom/frontend/: package.json
(+1 files in other folders)
