[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
minio = "0.1.0"
ntex = { version = "2.12.3", features = ["tokio"] }
object_store = { version = "0.12.0", features = ["aws"] }
runtime-tokio = "0.0.0"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
sqlx = { version = "0.8.3", features = ["chrono", "postgres", "runtime-tokio", "time", "uuid"] }
sqlx-postgres = { version = "0.8.3", features = ["time", "json", "migrate"] }
time = { version = "0.3.41", features = ["serde"] }
uuid = "1.16.0"
